--- a/services/yousofmersal_client/Cargo.toml
+++ b/services/yousofmersal_client/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 authors = ["Yousof Mersal <yousof777@gmail.com>"]
 description = "A client for yousofmersal.com"
 
+[profile.release]
+lto = true
+# opt-level = "s"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
