--- a/services/yousofmersal_client/Cargo.toml
+++ b/services/yousofmersal_client/Cargo.toml
@@ -15,10 +15,9 @@ codegen-units = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }
 dioxus = {version = "0.3.2", features = ["hot-reload"] }
 dioxus-web = { version = "0.3.1" }
-dioxus-router = { version = "0.3.0", features = ["web"]}
+dioxus-router = { version = "0.3.0", features = ["web", "query"]}
 fermi = { version = "0.3.0" }
 js-sys = "0.3.61"
 web-sys = { version = "0.3.61", features = ["Storage"] }
@@ -32,4 +31,3 @@ anyhow = "1.0.69"
 urlencoding = "2.1.2"
 pulldown-cmark = "0.9.2"
 dioxus-use-storage = { git = "https://github.com/YousofMersal/dioxus-hooks" }
-
