--- a/services/yousofmersal_client/Cargo.toml
+++ b/services/yousofmersal_client/Cargo.toml
@@ -15,16 +15,15 @@ codegen-units = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = {version = "0.3.2", features = ["hot-reload"] }
-dioxus-web = { version = "0.3.1" }
-dioxus-router = { version = "0.3.0", features = ["web", "query"]}
-fermi = { version = "0.3.0" }
+dioxus = {version = "0.4.0", features = ["hot-reload"] }
+dioxus-web = { version = "0.4.0" }
+dioxus-router = { version = "0.4.1", features = ["web"]}
+fermi = { version = "0.4.0" }
 js-sys = "0.3.61"
 web-sys = { version = "0.3.61", features = ["Storage"] }
-dioxus-free-icons = { version = "0.6.0", features = ["font-awesome-brands", "font-awesome-solid" ] }
+dioxus-free-icons = { version = "0.7.0", features = ["font-awesome-brands", "font-awesome-solid" ] }
 dioxus-toast = { git = "https://github.com/YousofMersal/dioxus-toast", default-features = false, features = ["web"] }
-# dioxus-toast = { version = "0.2.0", default-features = false, features = ["web"] }
-gloo = "0.8.0"
+gloo = "0.9.0"
 log = "0.4.17"
 wasm-logger = "0.2.0"
 anyhow = "1.0.69"
