--- a/services/yousofmersal_client/package.json
+++ b/services/yousofmersal_client/package.json
@@ -1,9 +1,12 @@
 {
-  "dependencies": {
-    "daisyui": "^2.51.3"
+  "engines": {
+    "node": ">=16"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "tailwindcss": "^3.2.7"
+    "daisyui": "^3.5.1"
+  },
+  "dependencies": {
+    "caniuse-lite": "^1.0.30001522"
   }
 }
